# ai_translation

./: .env  .gitignore  README.md  app.py  log.txt  main.py  pyproject.toml  requirements.txt  streamlit_manual.md
data/output/: M.A.D Bootcamp - Program Journey & Course Outline.docx  Testttttttt.docx  Testttttttt22.docx  testt3.docx  translated_page1.docx
src/: config.py  pdf_handler.py  pipeline.py  pipeline_2.py  translator.py  validator.py  writer.py
