[project]
name = "ai-translation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "argcomplete==3.6.2",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "docx>=0.2.4",
    "dotenv==0.9.9",
    "google-auth==2.40.2",
    "google-genai==1.18.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "opencv-python>=4.11.0.86",
    "packaging==25.0",
    "pillow>=11.2.1",
    "pipx==1.7.1",
    "platformdirs==4.3.8",
    "psycopg2-binary>=2.9.10",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pymupdf>=1.26.1",
    "python-docx>=1.2.0",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "rsa==4.9.1",
    "sniffio==1.3.1",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
    "urllib3==2.4.0",
    "userpath==1.9.2",
    "uv==0.7.13",
    "websockets==15.0.1",
]
